[package]
name = "rpcquickly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
itertools = "0.11.0"
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33", features = ["net", "io-util", "rt"] }
bincode = "1.3.3"
async-bincode = "0.7.1"
delegate = "0.10.0"
thiserror = "1.0.50"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
