[package]
name = "rpcquickly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
serde = { version = "1.0.190", features = ["derive", "rc"] }
tokio = { version = "1.33", features = ["net", "io-util", "rt"] }
async-bincode = "0.7.1"
thiserror = "1.0.50"

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
